# chat_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  run.sh
app/: ai.py  app.py  database.py  embedding.py  environment.py  prompt.py
